libs/extractor/src/snapshots/extractor__tests__stylex_keyframes_named_import.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { keyframes, create } from '@stylexjs/stylex';\nconst fadeIn = keyframes({\n    from: { opacity: 0 },\n    to: { opacity: 1 },\n});\nconst styles = create({\n    base: { animationName: fadeIn },\n});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "animation-name",
                value: "sxk-746573742e747378-66726f6d7b6f7061636974793a303b7d746f7b6f7061636974793a313b7d-",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                css: "@keyframes sxk-746573742e747378-66726f6d7b6f7061636974793a303b7d746f7b6f7061636974793a313b7d-{from{opacity:0;}to{opacity:1;}}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst fadeIn = \"sxk-746573742e747378-66726f6d7b6f7061636974793a303b7d746f7b6f7061636974793a313b7d-\";\nconst styles = { \"base\": \"a\" };\n",
}
