libs/extractor/src/snapshots/extractor__tests__stylex_keyframes_standalone.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst fadeIn = stylex.keyframes({\n    from: { opacity: 0 },\n    to: { opacity: 1 },\n});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Css(
            ExtractCss {
                css: "@keyframes sxk-746573742e747378-66726f6d7b6f7061636974793a303b7d746f7b6f7061636974793a313b7d-{from{opacity:0;}to{opacity:1;}}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst fadeIn = \"sxk-746573742e747378-66726f6d7b6f7061636974793a303b7d746f7b6f7061636974793a313b7d-\";\n",
}
