libs/extractor/src/snapshots/extractor__tests__stylex_named_import_types.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { create, types } from '@stylexjs/stylex';\nconst styles = create({ base: { width: types.length('100px') } });\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { create, types } from \"@stylexjs/stylex\";\nconst styles = { \"base\": \"OLwidth-v100px\" };\n",
}
