libs/extractor/src/snapshots/extractor__tests__stylex_non_types_non_ftw_call.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import stylex from '@stylexjs/stylex';\nfunction someFunc() { return 'red'; }\nconst styles = stylex.create({ base: { color: someFunc() } });\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import stylex from \"@stylexjs/stylex\";\nfunction someFunc() {\n\treturn \"red\";\n}\nconst styles = { \"base\": \"\" };\n",
}
